--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -13,30 +13,34 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set up Python
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+
+    - name: Set up Python 3.11
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
 
-    - name: Install system dependencies
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v3
+
+    - name: Install NDK
       run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-          openjdk-11-jdk \
-          android-sdk \
-          google-android-ndk-installer \
-          build-essential \
-          libffi-dev \
-          libssl-dev
+        ${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager --install "ndk;25.1.8937393"
 
     - name: Install Python dependencies
       run: |
-        python -m pip install --upgrade pip wheel setuptools
+        python -m pip install --upgrade pip
         pip install buildozer cython
         pip install kivy==2.3.0 kivymd==0.104.2 reportlab plyer pillow
 
-    - name: Build APK with buildozer
+    - name: Configure buildozer
       run: |
+        export ANDROID_SDK_ROOT=${{ env.ANDROID_SDK_ROOT }}
+        export ANDROID_NDK_ROOT=${{ env.ANDROID_SDK_ROOT }}/ndk/25.1.8937393
         buildozer android debug
 
     - name: Upload APK artifact
@@ -44,14 +48,14 @@ jobs:
       if: always()
       with:
         name: workhours-debug-apk
-        path: bin/*.apk
+        path: bin/**/*.apk
         retention-days: 30
 
     - name: Create Release
       if: success()
       uses: softprops/action-gh-release@v2
       with:
-        files: bin/*.apk
+        files: bin/**/*.apk
         tag_name: v1.0.0-debug-${{ github.run_number }}
         prerelease: true
         body: "Debug APK for WorkHours application"
